--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -911,7 +911,7 @@ ul, ol {
 }
 
 .modal.show {
-    display: flex;
+    display: block;
 }
 
 .modal__inner {
@@ -928,6 +928,12 @@ ul, ol {
     padding: 25px;
 
     background-color: #fff;
+    opacity: 0;
+
+    transform: scale(0.5);
+
+    transition: transform .2s ease-out,
+    opacity .2s ease-out;
 }
 
 .modal__header {
@@ -1006,6 +1012,10 @@ ul, ol {
     z-index: 1;
 
     transition: transform .2s linear;
+}
+
+.modal__close:focus {
+    outline: none;
 }
 
 .modal__close:hover {
