--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -522,18 +522,75 @@ ul, ol {
     position: relative;
 }
 
-.reviews:before {
+.reviews:before,
+.reviews:after {
     content: "";
     display: block;
-    width: 92px;
-    height: 126px;
-
-    background: url(../img/lines.svg) no-repeat;
+    width: 10px;
+    height: 100%;
 
     position: absolute;
-    top: -15px;
-    left: 2px;
-    z-index: 1;
+    top: 0;
+    z-index: 3;
+}
+
+.reviews:before {
+    left: 0;
+    background-image: linear-gradient(to right, #fff, rgba(255, 255, 255, 0));
+}
+
+.reviews:after {
+    right: 0;
+    background-image: linear-gradient(to left, #fff, rgba(255, 255, 255, 0));
+}
+
+.reviews .slick-list {
+    padding-top: 20px;
+    z-index: 2;
+}
+
+.reviews .slick-dots {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+
+    position: absolute;
+    bottom: -20px;
+    left: 0;
+    z-index: 3;
+}
+
+.reviews .slick-dots li {
+    margin: 0 8px;
+}
+
+.reviews .slick-dots li.slick-active button {
+    background: #004AF2;
+    /* border-color: rgba(0, 74, 242, .11); */
+    box-shadow: 0 0 0 5px rgba(0, 74, 242, .11);
+}
+
+.reviews .slick-dots button {
+    display: block;
+    width: 10px;
+    height: 10px;
+
+    padding: 0;
+    background: #DBDBDB;
+    border: 0;
+    border-radius: 50%;
+    cursor: pointer;
+
+    color: transparent;
+    font-size: 0;
+}
+
+.reviews .slick-dots button:focus {
+    outline: none;
+}
+
+.reviews__item {
+    padding: 0 10px;
 }
 
 .reviews__header {
@@ -545,6 +602,20 @@ ul, ol {
     z-index: 2;
 }
 
+.reviews__header::before {
+    content: "";
+    display: block;
+    width: 92px;
+    height: 126px;
+
+    background: url(../img/lines.svg) no-repeat;
+
+    position: absolute;
+    top: -13px;
+    left: 2px;
+    z-index: 1;
+}
+
 .reviews__header-content {
     flex-grow: 1;
     padding-left: 21px;
@@ -553,6 +624,8 @@ ul, ol {
 .reviews__photo {
     width: 100px;
     height: 100px;
+    position: relative;
+    z-index: 2;
 
     border-radius: 50%;
     border: 5px solid #fff;
